fix layout shift in share screen

--- a/src/livecodes/styles/app.scss
+++ b/src/livecodes/styles/app.scss
@@ -1533,16 +1533,26 @@ i.arrow {
 
       li {
         margin-bottom: 0.5em;
+        min-height: 25px;
         white-space: nowrap;
         width: 45%;
 
-        img {
-          margin-bottom: -0.3em;
-          margin-right: 0.5em;
-        }
-
         a {
           text-decoration: none;
+        }
+
+        .share-image-container {
+          display: inline-block;
+          padding: 0;
+          margin: 0;
+          width: 21px;
+          height: 24px;
+
+          img {
+            margin-bottom: -0.4em;
+            margin-right: 0.5em;
+            width: 21px;
+          }
         }
       }
     }
